# bpl-qa-system-tests

./: .env.example  .flake8  .gitignore  .gitlab-ci.yml  .mypy.ini  Dockerfile  Pipfile  README.md  conftest.py  enums.py  pyproject.toml  pytest.ini  report-render.sh  schedule.py  settings.py  setup_bpl_local_test_env.sh
.github/workflows/: ci.yaml
azure/: blob_storage.py  teams.py  vault.py
azure_actions/: blob_storage.py  teams.py  vault.py
db/: models.py
db/carina/: models.py  session.py
db/cosmos/: models.py
db/hubble/: models.py
db/polaris/: models.py  session.py
db/vela/: models.py  session.py
tests/: conftest.py  retailer_data.py  retry_requests.py
tests/api/: base.py
tests/customer_management_api/: test_account_adjustment.py  test_accounts.py  test_accounts_rewards.py  test_accounts_status.py  test_accounts_vouchers.py  test_enrolment.py  test_getbycredentials.py  test_rewards_status.py  test_vouchers_status.py
tests/db_actions/: account_holder.py  carina.py  cosmos.py  hubble.py  polaris.py  retailer.py  retry_tasks.py  reward.py  vela.py
tests/end_to_end/: test_end_to_end.py
tests/fixtures/: asos.yaml  polaris.yaml  trenette.yaml  vela.yaml
tests/requests/: enrolment.py  status_change.py  transaction.py
tests/reward_management/: conftest.py  test_reward_imports.py
tests/reward_management_api/: test_allocation.py  test_status_change.py
tests/rewards_rule_management_api/: test_active_campaign_slugs.py  test_campaign_status.py  test_transaction.py
tests/shared/: account_holder.py
utils/: __init__.py
(+231 files in other folders)
