[tool.poetry]
name = "bpl-qa-system-tests"
version = "0.1.0"
description = ""
authors = ["Bink <bink@bink.bink>"]
readme = "README.md"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "azure"
url = "https://pkgs.dev.azure.com/binkhq/_packaging/binkhq/pypi/simple/"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.10"
pytest-bdd = "^6.0.1"
azure-keyvault = "^4.2.0"
cryptography = "^38.0.1"
azure-storage-blob = "^12.14.0"
azure-identity = "^1.11.0"
pytest-html = "^3.1.1"
APScheduler = "^3.9.1"
Faker = "^15.1.1"
python-dotenv = "^0.21.0"
deepdiff = "^5.8.1"
pydantic = "^1.10.2"
arrow = "^1.2.3"
types-redis = "^4.3.21.1"
redis = "^4.3.4"
PyYAML = "^6.0"
psycopg2-binary = "^2.9.4"
sqlalchemy-utils = "^0.38.3"
retry-tasks-lib = { version = "^2.2.1", source = "azure" }
tzdata = "^2023.4"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
mypy = "^0.982"
isort = "^5.10.1"
xenon = "^0.9.0"
types-requests = "^2.28.11.2"
ptpython = "^3.0.20"
install = "^1.3.5"
types-PyYAML = "^6.0.12"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
lines_between_types = 1
